--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,7 +59,7 @@ h1 {
 }
 
 h2 {
-  @apply text-2xl md:text-4xl lg:text-5xl;
+  @apply text-2xl md:text-4xl lg:text-5xl md:pt-8 md:pb-4 pt-4 pb-2;
 }
 
 h3,
