--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply break-words pb-4 mt-0 font-black;
+  @apply break-words pb-4 mt-0 font-bold;
   font-family: var(--font-inter-tight);
 }
 
