--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,65 +20,54 @@ body {
   overflow: auto;
 }
 
+@layer base {
+  p {
+    @apply break-words text-medium mb-4;
+  }
 
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply break-words pb-4 md:pt-8 pt-4 mt-0 font-bold;
+    font-family: var(--font-inter-tight);
+  }
 
-input,
-button,
-textarea,
-select {
-  font: inherit;
+  footer {
+    @apply text-tiny;
+  }
+
+  h1 {
+    @apply text-3xl md:text-5xl lg:text-6xl pb-8;
+  }
+
+  h2 {
+    @apply text-2xl md:text-4xl lg:text-5xl md:pt-8 md:pb-4 pt-4 pb-2;
+  }
+
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply text-xl md:text-2xl lg:text-3xl;
+  }
+
+  ul {
+    @apply pb-4 pl-4 list-disc;
+  }
+
+  a {
+    @apply hover:text-brand-accent duration-500;
+  }
 }
 
-p {
-  @apply break-words text-medium mb-4;
+.imagebox {
+  @apply pb-8 lg:pr-32;
+
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  @apply break-words pb-4 mt-0 font-bold;
-  font-family: var(--font-inter-tight);
-}
-
-footer {
-  @apply text-tiny;
-}
-
-
-.title {
-  @apply pt-8;
-}
-
-
-
-h1 {
-  @apply text-3xl md:text-5xl lg:text-6xl pb-8;
-}
-
-h2 {
-  @apply text-2xl md:text-4xl lg:text-5xl md:pt-8 md:pb-4 pt-4 pb-2;
-}
-
-h3,
-h4,
-h5,
-h6 {
-  @apply text-xl md:text-2xl lg:text-3xl;
-}
-
-
-ul {
-  @apply pb-4 pl-4 list-disc;
-}
-
-.animate-checkbox:hover {
-  transform: scale(1.05);
-  transition: all 0.5s ease-in-out;
-}
-
-a {
-  @apply hover:text-brand-accent duration-500;
+.caption {
+  @apply md:pb-4 text-sm text-foreground/80 pl-4 pt-1 md:pt-2;
 }
